added notifications with supabase and login screen

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "3.0.0"
+    "nuxt": "3.0.0",
+    "sass": "^1.56.2"
+  },
+  "dependencies": {
+    "@nuxtjs/supabase": "^0.3.0"
   }
 }
